--- a/_config.yml
+++ b/_config.yml
@@ -9,21 +9,33 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Patrick Lafferty's Portfolio
+email: patrick_lafferty@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    My portfolio and blog
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://patricklafferty.ca" # the base hostname & protocol for your site
+github_username:  patrick-lafferty
 
 # Build settings
 markdown: kramdown
-theme: minima
+
+gems:
+    - jekyll-paginate
+
+exclude: [vendor]
+
+liquid:
+    error_mode: strict
+
+paginate: 10
+paginate_path: "/blog/page:num/"
+
+defaults:
+    -
+        scope:
+                path: ""
+                type: "posts"
+        values:
+                permalink: /blog/:year/:month/:day/:title/
+
